# mailiq

./: README.md  embeddings.npy  fetch_mails.py  index.faiss  mail_ids.json  main.py  pyproject.toml  search.py  vectorize.py
