[project]
name = "mailsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
